# boring-engine

./: CMakeLists.txt  main.cpp  todo.list
src/: main.cpp  object.cpp  object.hpp  window.cpp  window.hpp
